# rl-arm-tracking

./: LICENSE  README.md  env.py  eval.py  hello_arm.py  ik.py  ik_demo.py  pd_demo.py  pyproject.toml  train.py  trajectory.py  verify_length.py
logs/: evaluations.npz
logs/tb/PPO_1/: events.out.tfevents.1779253865.meej.22567.0
logs/tb/PPO_2/: events.out.tfevents.1779254441.meej.23553.0
