[project]
name = "rl-arm-tracking"
version = "0.1.0"
description = "RL policy for 3D Cartesian end-effector trajectory tracking on a Franka Panda arm (Humanoid Robotics intern challenge submission)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.9",
    "mujoco>=3.8.1",
    "numpy>=2.4.4",
    "rich>=15.0.0",
    "robot-descriptions>=2.0.0",
    "stable-baselines3>=2.8.0",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.3",
]
